# nbfigtulz

./: .readthedocs.yaml  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
docs/source/: conf.py  index.rst  intro.rst  nbfigtulz.rst
example/: .gitignore  notebook.html  notebook.ipynb
img/: test.pgf
src/nbfigtulz/: __init__.py  config.py  figtools.py  image.py  thumbnail.py
