[metadata]
name = nbfigtulz
version = 1.0
author = Nis Meinert
author_email = nis.meinert@gmail.com
description = Collection of tools to generate and display visualizations in JupyterLab 
keywords = visualization, jupyterlab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avitase/nbfigtulz
project_urls =
    Bug Tracker = https://github.com/avitase/nbfigtulz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib
    ipython
    Pillow

[options.packages.find]
where = src
